--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.vs/slnx.sqlite
+.vs/ProjectSettings.json
+.vs/VSWorkspaceState.json
+.vs/MemoryBank/FileContentIndex/6a2b862c-a319-4a20-afde-4f718a7bf07e.vsidx
+.vs/MemoryBank/v17/.wsuo
+.vs/MemoryBank/v17/DocumentLayout.json
