--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ jsonschema-specifications==2023.12.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+msal-streamlit-authentication==1.0.9
 numpy==1.26.4
 openai==1.14.0
 packaging==23.2
@@ -44,7 +45,7 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
-streamlit==1.32.0
+streamlit==1.32.1
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.1
