--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,16 @@ altair==5.2.0
 annotated-types==0.6.0
 anyio==4.3.0
 attrs==23.2.0
+bcrypt==4.1.2
 beautifulsoup4==4.12.3
 blinker==1.7.0
-bs4==0.0.2
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 distro==1.9.0
+extra-streamlit-components==0.1.71
 gitdb==4.0.11
 GitPython==3.1.42
 h11==0.14.0
@@ -23,7 +24,6 @@ jsonschema-specifications==2023.12.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
-msal-streamlit-authentication==1.0.9
 numpy==1.26.4
 openai==1.14.0
 packaging==23.2
@@ -35,8 +35,10 @@ pydantic==2.6.4
 pydantic_core==2.16.3
 pydeck==0.8.1b0
 Pygments==2.17.2
+PyJWT==2.8.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.1
 referencing==0.33.0
 requests==2.31.0
 rich==13.7.1
@@ -45,7 +47,11 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
+st-pages==0.4.5
 streamlit==1.32.1
+streamlit-authenticator==0.3.1
+streamlit-chat==0.1.1
+streamlit-msal==0.2.0
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.1
