Renamed home.py app.py because of case sensitive  problem

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "module": "streamlit",
-            "args": ["run","./Home.py"],
+            "args": ["run","./app.py"],
             "jinja": true,
             "justMyCode": false
         }        
